--- a/catalog/templates/album.html
+++ b/catalog/templates/album.html
@@ -18,12 +18,11 @@
                     <button class="btn btn-warning btn-rounded">I want to listen</button>
                     <h5 class="box-title mt-5">Genre</h5>
                     <ul class="list-unstyled">
-                        <li><i></i>{{ album.genre.name }}</li>
+                        <li><i></i>{{ album.genre.name}}</li>
                     </ul>
                     <h6 class="box-title mt-5"> Tracks</h6>
                     <ul class="list-unstyled">
-                        <li><i></i>{{ album.track.name }}</li>
-                <div/>
+                        <li><i></i>{{ album.album_track }}</li>
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <h5 class="box-title mt-5">Album Info</h5>
                     <div class="table-responsive">
@@ -33,8 +32,8 @@
                                     <td>Singer</td>
                                     <td>
                                         {% for singer in singers %}
-                                            <li>{{ singer.name }}</li>
-                                    {% endfor %}
+                                            <li>{{ Singer.name }}</li>
+                                        {% endfor %}
                                     </td>
                                 </tr>
                                 <tr>
