--- a/catalog/templates/albums.html
+++ b/catalog/templates/albums.html
@@ -1,26 +1,39 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="album py-5">
+<div class="album">
     <div class="container">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3">
         {% for album in albums %}
         <div class="col">
           <div class="card shadow-sm">
             <div class="card h-100 w-100" style="background-color: gray">
               <div class="embed-responsive embed-responsive-16by9">
-                <img alt="#" class="mx-auto d-block" src="{{ album.cover.url }}"/>
+                <img alt="#" class="mx-auto d-block" src="{{ album.cover.url }}" width="100%" height="100%"/>
               </div>
             </div>
             <div class="card-body">
-              <h5 class="card-title">{{album.title}} ({{album.year}})</h5>
-              <p class="card-text">{{album.genre|truncatechars:180 }}</p>
-              <a href="{% url 'album_details' album.slug %}" class="btn btn-warning">Details</a>
+              <h5 class="card-title">{{album.title}}</h5>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  {% if user.is_authenticated %}
+                    <a href="{% url 'album_details' album.slug %}" class="btn btn-sm btn-outline-dark">Details</a>
+                    {% if album.pk in profile_profile_favourites.pk %}
+                      <a href="{% url 'favourite' album.id %}" class="btn btn-sm btn-outline-dark">Delete from favourites</a>
+                    {% else %}
+                      <a href="{% url 'favourite' album.id %}" class="btn btn-sm btn-outline-dark">Add to favourites</a>
+                    {% endif %}
+                  {% else %}
+                    <a href="{% url 'album_details' album.slug %}" class="btn btn-sm btn-outline-dark">Details</a>
+                  {% endif %}
+                </div>
+                <small class="text-body-secondary">{{recipe.time_cook}}</small>
+              </div>
             </div>
           </div>
         </div>
         {% endfor %}
       </div>
     </div>
-</div>
+  </div>
 {% endblock %}
