--- a/catalog/templates/favourites.html
+++ b/catalog/templates/favourites.html
@@ -13,10 +13,10 @@
               </div>
             </div>
             <div class="card-body">
-              <h5 class="card-title">{{album.title}}</h5>
+              <h5 class="card-title">{{ album.title }}</h5>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <a href="{% url 'albums_list' album.slug %}" class="btn btn-sm btn-outline-dark">Details</a>
+                  <a href="{% url 'album_details' album.slug %}" class="btn btn-sm btn-outline-dark">Details</a>
                   <a href="{% url 'favourite' album.id %}" class="btn btn-sm btn-outline-dark">Delete from favourites</a>
                 </div>
               </div>
