--- a/templates/base.html
+++ b/templates/base.html
@@ -13,69 +13,76 @@
     </style>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" >
-    <title>Albums site</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{% static 'style.css' %}">
-    <link href="{% static 'album.css' %}"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <title>Albums</title>
 </head>
-<body>
-    <header class="p-3 text-bg-dark">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
-                </a>
 
-            {% if user.is_superuser %}
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-              <li><a href="{% url 'albums_list' %}" class="nav-link px-2 text-white">Catalog</a></li>
-              <li><a href="#" class="nav-link px-2 text-white">About</a></li>
-              <li><a href="{% url 'admin:index' %}" class="nav-link px-2 text-white">Admin panel</a></li>
-            </ul>
-            {% else %}
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-              <li><a href="{% url 'albums_list' %}" class="nav-link px-2 text-white">Catalog</a></li>
-            </ul>
-            {% endif %}
-            {% if user.is_authenticated %}
-                    <span style="margin-right: 20px">Hello, {{ request.user }}</span>
-                    <div class="dropdown text-end">
-                        <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle"
-                           data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="{{ request.user.profile_user.avatar.url }}" alt="" width="32" height="32"
-                                 class="rounded-circle">
-                        </a>
-                        <ul class="dropdown-menu text-small" style="">
-                            <li><a class="dropdown-item" href="{% url 'user_page' %}">Profile</a></li>
-                            <li><a class="dropdown-item" href="{% url 'favourite_list' %}">My albums</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="{% url 'logout' %}">Sign out</a></li>
-                        </ul>
-                    </div>
-            {% else %}
-                <div class="text-end">
-                  <button type="button" onclick="window.location.href={% url 'login' %}" class="btn btn-outline-light me-2">Login</button>
-                  <button type="button" onclick="window.location.href={% url 'register' %}" class="btn btn-warning">Sign-up</button>
-                </div>
-            {% endif %}
-          </div>
-        </div>
-    </header>
-    {% block content %}
-    {% endblock %}
-    <div class="container">
-      <footer class="py-3 my-4">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        </ul>
-        <p class="text-center text-body-secondary">© 2023 Company, Inc</p>
-      </footer>
-    </div>
+<body>
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+
+
+  <nav class="py-1 bg-secondary bg-gradient">
+    <div class="container d-flex flex-wrap">
+      {% if user.is_superuser %}
+
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+          <li><a href="{% url 'home' %}" class="nav-link px-2 text-white">Home</a></li>
+          <li><a href="{% url 'albums_list' %}" class="nav-link px-2 text-white">Albums</a></li>
+          <li><a href="{% url 'admin:index' %}" class="nav-link px-2 text-white">Admin panel</a></li>
+      </ul>
+        {% else %}
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+          <li><a href="{% url 'home' %}" class="nav-link px-2 text-white">Home</a></li>
+          <li><a href="{% url 'albums_list' %}" class="nav-link px-2 text-white">Albums</a></li>
+        </ul>
+        {% endif %}
+
+        {% if user.is_authenticated %}
+                <span style="margin-right: 20px">Hello, {{request.user}}</span>
+                <div class="dropdown text-end">
+                  <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="{{ request.user.profile_user.avatar.url }}" alt="mdo" width="32" height="32" class="rounded-circle">
+                  </a>
+                  <ul class="dropdown-menu text-small">
+                    <li><a class="dropdown-item" href="{% url 'user_page' %}">Profile</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="{% url 'add_album' %}">Add album</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="{% url 'favourite_list' %}">Favourites</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="{% url 'logout' %}">Sign out</a></li>
+                  </ul>
+                </div>
+        {% else %}
+            <div class="text-end">
+              <button type="button" onclick="window.location.href={% url 'login' %}" class="btn btn-outline-light me-2">Login</button>
+              <button type="button" onclick="window.location.href={% url 'register' %}" class="btn btn-outline-light">Sign-up</button>
+            </div>
+        {% endif %}
+
+    </div>
+  </nav>
+  <header class="py-10">
+    <div class="container flex-wrap justify-content-center py-4">
+      <form class="col-12 col-lg-auto mb-3 mb-lg-0" role="search" action="{% url 'search_album' %}" method="get">
+        <input name="q" type="text" class="form-control form-control-dark text-dark" placeholder="Search..." aria-label="Search">
+      </form>
+    </div>
+  </header>
+
+{% block content %}
+{% endblock %}
+
+<div class="container">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <p class="col-md-4 mb-0 text-body-dark fs-4">© 2023 Company, Inc</p>
+
+    <ul class="nav col-md-4 justify-content-end">
+      <li class="nav-item"><a href="{% url 'home' %}" class="nav-link px-3 text-dark fs-4">Home</a></li>
+    </ul>
+  </footer>
+</div>
+
 </body>
 </html>
